examples/negative/parse_errors/L1/reserved_elsif.ob
MODULE Reserved;

VAR ELSIF: INTEGER;

END Reserved.
